--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.tufei.chatroom.MainActivity">
+    tools:context="com.example.tufei.chatroom.mvp.chat.ChatActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
